remove backend route todo_scheduling
