# backend/app/http_routes.py
@@ -30,7 +30,6 @@ from routes.product_task_association import ProductTaskAssociation
 from routes.manual_purchase import ManualPurchase
 from routes.inapp_apple_purchase import InAppApplePurchase
 from routes.todos import Todos
-from routes.todo_scheduling import TodosScheduling
 from routes.todo_daily_emails import TodoDailyEmails
 from routes.vocabulary import Vocabulary
 from routes.product_category import ProductCategory
@@ -87,7 +86,6 @@ class HttpRouteManager:
         api.add_resource(ManualPurchase, "/manual_purchase")
         api.add_resource(InAppApplePurchase, "/in_app_apple_purchase")
         api.add_resource(Todos, "/todos")
-        api.add_resource(TodosScheduling, "/todos_scheduling")
         api.add_resource(TodoDailyEmails, "/todo_daily_emails")
         api.add_resource(Vocabulary, "/vocabulary")
         api.add_resource(ProductCategory, "/product_category")
