# docs/openAPI/backend_api.yaml
@@ -4698,68 +4698,6 @@ paths:
                 properties:
                   error:
                     type: string
-  /todos_scheduling:
-    post:
-      tags:
-        - Scheduler
-      summary: Reschedule todos for users based on timezone and other conditions
-      parameters:
-        - in: header
-          name: Authorization
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - datetime
-              properties:
-                datetime:
-                  type: string
-                  format: date-time
-      responses:
-        '200':
-          description: Todos rescheduled successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  todos_pk:
-                    type: array
-                    items:
-                      type: integer
-        '400':
-          description: Invalid request or missing datetime in body
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-        '403':
-          description: Authentication error
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-        '500':
-          description: Error running extract todos
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
   /todos:
     post:
       tags:
